--- a/Exam2CD/Exam2CD.csproj
+++ b/Exam2CD/Exam2CD.csproj
@@ -56,6 +56,9 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Enums\Categories.cs" />
+    <Compile Include="Enums\Pages.cs" />
+    <Compile Include="Enums\Regions.cs" />
     <Compile Include="Helpers\SeleniumHelper.cs" />
     <Compile Include="PageObject\BasePage.cs" />
     <Compile Include="PageObject\ClickDimensionsPages\CdHomePage.cs" />
@@ -65,6 +68,7 @@
     <Compile Include="PageObject\ClickDimensionsPages\CdLearningAndSupportPage.cs" />
     <Compile Include="PageObject\ClickDimensionsPages\CdTechnologyPage.cs" />
     <Compile Include="PageObject\ClickDimensionsPages\HeaderSection.cs" />
+    <Compile Include="PageObject\ClickDimensionsPages\PartnerSection.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Tests\ClickDimensionsTests.cs" />
   </ItemGroup>
